[package]
name = "kabu-defi-pools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-defi-abi.workspace = true
kabu-defi-address-book.workspace = true
kabu-defi-uniswap-v3-math.workspace = true
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true

async-stream.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
reth-storage-api.workspace = true
revm.workspace = true
strum.workspace = true
tokio-stream.workspace = true
tracing.workspace = true


# alloy
alloy.workspace = true
alloy-evm.workspace = true

[features]
debug-calculation = []


[dev-dependencies]
kabu-node-debug-provider.workspace = true

alloy-rpc-client.workspace = true
alloy-transport.workspace = true
env_logger.workspace = true
rand.workspace = true
tokio.workspace = true
url.workspace = true
