[package]
name = "kabu-defi-preloader"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-blockchain.workspace = true
kabu-core-components = { workspace = true }
kabu-defi-address-book.workspace = true
kabu-evm-utils.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true
kabu-types-market.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

#alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-trace.workspace = true

#revm
revm.workspace = true

# reth
reth-tasks.workspace = true
