[package]
name = "kabu-defi-price"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-defi-address-book.workspace = true
kabu-defi-pools.workspace = true
kabu-types-entities.workspace = true

tokio.workspace = true
tracing.workspace = true

# alloy
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true

# revm
revm.workspace = true
