[package]
name = "kabu-defi-price"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-blockchain.workspace = true
kabu-core-components = { workspace = true }
kabu-defi-address-book.workspace = true
kabu-defi-pools.workspace = true
kabu-types-market.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true

# reth
reth-tasks.workspace = true
