[package]
name = "kabu-evm-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
eyre.workspace = true
rand.workspace = true
revm.workspace = true
tokio.workspace = true
tracing.workspace = true


[dev-dependencies]
criterion.workspace = true
dotenvy.workspace = true
tracing.workspace = true
url.workspace = true

[[bench]]
harness = false
name = "benchmark"
