[package]
name = "kabu-evm-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-defi-abi.workspace = true
kabu-defi-address-book.workspace = true
kabu-evm-db.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true

# misc
auto_impl.workspace = true
axum.workspace = true
eyre.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
tracing.workspace = true

# revm
revm.workspace = true
revm-inspectors.workspace = true

# alloy
alloy.workspace = true

# reth
reth-db.workspace = true
reth-primitives.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true
