[package]
name = "kabu-evm-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-defi-abi.workspace = true
kabu-defi-address-book.workspace = true
kabu-evm-db.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true

# misc
axum.workspace = true
either.workspace = true
eyre.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
tracing.workspace = true

# revm
revm.workspace = true

# alloy
alloy.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true

# reth
reth-db.workspace = true
reth-primitives.workspace = true
