[package]
name = "kabu-execution-estimator"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-blockchain.workspace = true
kabu-core-components = { workspace = true }
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-events.workspace = true
kabu-types-swap.workspace = true

chrono.workspace = true
eyre.workspace = true
influxdb.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true

#revm
revm.workspace = true

# reth
reth-tasks.workspace = true
