[package]
name = "kabu-execution-multicaller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-defi-abi.workspace = true
kabu-defi-address-book.workspace = true
kabu-evm-utils.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true

eyre.workspace = true
k256.workspace = true
lazy_static.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-signer-local.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true


[dev-dependencies]
env_logger.workspace = true
kabu-defi-pools.workspace = true
tokio.workspace = true
