[package]
name = "kabu-node-db-access"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-evm-utils.workspace = true
kabu-node-actor-config.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true

chrono.workspace = true
futures.workspace = true
revm.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-transport.workspace = true

# reth
reth-chainspec.workspace = true
reth-db.workspace = true
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-convert.workspace = true

[dev-dependencies]
alloy-rpc-client.workspace = true
env_logger.workspace = true
eyre.workspace = true
