[package]
name = "kabu-node-debug-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
futures.workspace = true
k256.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

alloy.workspace = true


[dev-dependencies]
dotenvy.workspace = true
env_logger.workspace = true
kabu-defi-abi.workspace = true
url.workspace = true

alloy-provider.workspace = true
alloy-rpc-client.workspace = true
