[package]
name = "kabu-node-grpc"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-evm-utils.workspace = true
kabu-node-grpc-exex-proto.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true

chrono.workspace = true
eyre.workspace = true
futures.workspace = true
revm.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

# reth
reth.workspace = true
reth-exex.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true
