[package]
name = "kabu-node-json-rpc"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-components = { workspace = true }
kabu-node-config.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true

chrono.workspace = true
eyre.workspace = true
futures.workspace = true
reth-tasks.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-pubsub.workspace = true
alloy-rpc-types.workspace = true

#op-alloy
op-alloy.workspace = true
