[package]
name = "kabu-node-player"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-components = { workspace = true }
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true
kabu-types-market.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true

#reth
reth-tasks.workspace = true

#revm
revm.workspace = true
